# SplashyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CreateSolution.bat  LICENSE  SyncDepencencies.sh
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp  Editor.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorLayer.cpp  EditorLayer.hpp  RayTracingCamera.cpp  RayTracingCamera.hpp  Sphere.hpp  main.cpp
Engine/: CMakeLists.txt
Engine/shader/: triangleShader.glsl
Engine/src/: Gl.h  GlTypes.h  engine.cpp  todo.h
Engine/src/Asset/: AssetManager.cpp  AssetManager.hpp
Engine/src/Camera/: Camera.cpp  Camera.hpp
Engine/src/Core/: Application.cpp  Application.h  Application.hpp  Core.hpp  ImGuiLayer.cpp  Layer.cpp  Layer.hpp  Logger.cpp  Logger.hpp  Random.cpp  Random.hpp  Time.cpp  Time.hpp
Engine/src/Graphics/: Buffer.cpp  Buffer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp  Window.cpp  Window.hpp  o_Buffer.cpp  o_Buffer.hpp
Engine/src/Input/: Event.cpp  Event.hpp  GlErrorHandler.cpp  GlErrorHandler.hpp  Input.cpp  Input.hpp  KeyCodes.hpp
Engine/src/Pch/: Pch.h
Engine/src/Platform/Common/: CommonInput.cpp  CommonInput.hpp  CommonWindow.cpp  CommonWindow.hpp  GlfwError.cpp
Engine/src/Platform/OpenGl/: OpenGlError.cpp  OpenGlFrameBuffer.cpp  OpenGlFrameBuffer.hpp  OpenGlGraphicsContext.cpp  OpenGlGraphicsContext.hpp  OpenGlIndexBuffer.cpp  OpenGlIndexBuffer.hpp  OpenGlRendererCommands.cpp  OpenGlRendererCommands.hpp  OpenGlShader.cpp  OpenGlShader.hpp  OpenGlTexture2D.cpp  OpenGlTexture2D.hpp  OpenGlUniformBuffer.cpp  OpenGlUniformBuffer.hpp  OpenGlVertexArray.cpp  OpenGlVertexArray.hpp  OpenGlVertexBuffer.cpp  OpenGlVertexBuffer.hpp  OpenGlVertexLayout.cpp  OpenGlVertexLayout.hpp
Engine/src/Render/: Particles.cpp  Particles.hpp  Primitive.cpp  Primitive.hpp  Renderer.cpp  Renderer.hpp  RendererCommands.cpp  RendererCommands.hpp  Transform.cpp  Transform.hpp
Engine/src/Scene/: Components.hpp  Scene.cpp  Scene.hpp
Engine/src/Splashy/Camera/: Camera.cpp  Camera.hpp
Engine/src/Splashy/Configs/: ImguiUserConfig.hpp
Engine/src/Splashy/Core/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Core.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Layer.cpp  Layer.hpp  Logger.cpp  Logger.hpp  Macros.hpp  Main.cpp  Memory.hpp  Random.cpp  Time.cpp  Time.hpp  Types.hpp  Utils.cpp  Utils.hpp
Engine/src/Splashy/Eventing/: Eventing.cpp  Eventing.hpp  InputEvents.cpp  InputEvents.hpp
Engine/src/Splashy/Graphics/: Create.cpp  FrameBuffer.hpp  GraphicsContext.hpp  IndexBuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexLayout.hpp  Window.cpp  Window.hpp
Engine/src/Splashy/Input/: Event.cpp  Event.hpp  Input.cpp  Input.hpp  KeyCodes.hpp
Engine/src/Splashy/Render/: RendererCommands.cpp  RendererCommands.hpp  Transform.cpp  Transform.hpp
Engine/src/Splashy/Scene/: Components.hpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp
Engine/src/Splashy/Utilities/: Instrumentation.cpp  Instrumentation.hpp  InstrumentationMacros.hpp  Timer.cpp  Timer.hpp
Engine/src/Splashy/debug/: GlErrorHandler.cpp  GlErrorHandler.hpp  Instrumentation.cpp  Instrumentation.hpp
Engine/src/debug/: GlErrorHandler.cpp  GlErrorHandler.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Instrumentation.cpp  Instrumentation.hpp
assets/shaders/: ColorShader.glsl  cubeShader.glsl  lineShader.glsl  shader.glsl  testShader.glsl  textureShader.glsl  triangleShader.glsl
